add block/unblock user logic with tests.
